Fix scrollbar appearing when it shouldn't

--- a/hollow-knight/map.css
+++ b/hollow-knight/map.css
@@ -2,3 +2,7 @@
     max-width: 90%;
     max-height: 90vh;
 }
+
+body {
+    overflow:hidden;
+}
